# parsec-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md  rustfmt.toml
oxide-engine/: Cargo.toml
oxide-engine-examples/: Cargo.toml
oxide-engine-macros/: Cargo.toml
oxide-engine/src/: app.rs  error.rs  headless_app.rs  lib.rs  main.rs  time.rs
oxide-engine/src/assets/: library.rs  mod.rs
oxide-engine/src/components/: camera.rs  camers.rs  mesh.rs  mod.rs  transform.rs
oxide-engine/src/ecs/: mod.rs
oxide-engine/src/ecs/entity/: mod.rs
oxide-engine/src/ecs/system/: mod.rs
oxide-engine/src/ecs/world/: add_component.rs  archetype.rs  bundle.rs  component.rs  fetch.rs  mod.rs  query.rs  remove_component.rs  spawn.rs
oxide-engine/src/graphics/: backend.rs  buffer.rs  camera.rs  command_list.rs  fence.rs  framebuffer.rs  graphics_data.rs  image.rs  material.rs  mesh.rs  mesh_buffer.rs  mod.rs  pipeline.rs  renderer.rs  renderpass.rs  sampler.rs  semaphore.rs  shader.rs  swapchain.rs  transform.rs  window.rs
oxide-engine/src/graphics/renderer/: camera_data.rs  draw_queue.rs  image_data.rs  material_data.rs  mesh_data.rs  mod.rs  sync.rs  transform_data.rs
oxide-engine/src/graphics/renderer/assets/: mesh.rs
oxide-engine/src/graphics/renderer/assets/mesh/: obj.rs
oxide-engine/src/graphics/renderer/components/: camera.rs  mesh.rs  mod.rs  transform.rs
oxide-engine/src/graphics/vulkan/: allocation.rs  allocator.rs  buffer.rs  command_buffer.rs  context.rs  descriptor_set.rs  device.rs  fence.rs  format_size.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  instance.rs  mod.rs  physical_device.rs  queue.rs  renderer.rs  renderpass.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs
oxide-engine/src/graphics/vulkan/renderer/: camera.rs  image_data.rs  images.rs  material.rs  mod.rs  sync.rs
oxide-engine/src/input/: key.rs  keys.rs  mod.rs  mouse.rs
oxide-engine/src/math/: mat.rs  mod.rs  quat.rs  vec.rs
oxide-engine/src/resources/: mod.rs
oxide-engine/src/utils/: id_counter.rs  id_vec.rs  mod.rs
oxide-engine/src/world/: archetype.rs  archetype_storage.rs  bundle.rs  mod.rs
parsec-engine/: Cargo.toml
parsec-engine-assets/: Cargo.toml
parsec-engine-assets/src/: lib.rs
parsec-engine-assets/src/assets/mesh/: mod.rs  obj.rs
parsec-engine-cli/: Cargo.toml
parsec-engine-cli-core/: Cargo.toml
parsec-engine-cli/src/: main.rs
parsec-engine-core/: Cargo.toml
parsec-engine-graphics/: Cargo.toml
parsec-engine-graphics/src/: backend.rs  buffer.rs  command_list.rs  framebuffer.rs  gpu_cpu_fence.rs  gpu_gpu_fence.rs  image.rs  lib.rs  pipeline.rs  renderpass.rs  sampler.rs  shader.rs  window.rs
parsec-engine-input/: Cargo.toml
parsec-engine-input/src/: keys.rs  lib.rs  mouse.rs
parsec-engine-renderer/: Cargo.toml
parsec-engine-renderer/src/: camera_data.rs  depth_image.rs  draw_queue.rs  graphics_bundle.rs  lib.rs  light_data.rs  material_data.rs  mesh_data.rs  present_image.rs  shadow.rs  sync.rs  texture.rs  texture_atlas.rs  transform_data.rs
parsec-engine-renderer/src/assets/mesh/: mod.rs  obj.rs
parsec-engine-renderer/src/components/: camera.rs  light.rs  mesh_renderer.rs  mod.rs  transform.rs
parsec-engine-vulkan/: Cargo.toml
parsec-engine-vulkan/src/: allocation.rs  allocator.rs  barriers.rs  buffer.rs  buffer_usage.rs  command_buffer.rs  descriptor_set.rs  device.rs  fence.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  instance.rs  lib.rs  memory.rs  physical_device.rs  pipeline_stage.rs  queue.rs  renderpass.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  utils.rs
parsec-engine/src/: app.rs  ctx.rs  error.rs  graphics_bundle.rs  lib.rs  time.rs
parsec-engine/src/arena/: handle.rs  mod.rs
parsec-engine/src/assets/: mod.rs
parsec-engine/src/assets/assets/mesh/: mod.rs  obj.rs
parsec-engine/src/assets/core/mesh/: mod.rs  obj.rs
parsec-engine/src/assets/core/shader/: mod.rs
parsec-engine/src/cli/: mod.rs
parsec-engine/src/ecs/: mod.rs
parsec-engine/src/ecs/entity/: mod.rs
parsec-engine/src/ecs/resources/: data.rs  dependency.rs  mod.rs  resource.rs
parsec-engine/src/ecs/system/: mod.rs  requests.rs
parsec-engine/src/ecs/world/: add_component.rs  archetype.rs  fetch.rs  mod.rs  query.rs  remove_component.rs  spawn.rs
parsec-engine/src/generational_arena/: arena.rs  handle.rs  mod.rs
parsec-engine/src/graphics/: backend.rs  buffer.rs  command_list.rs  framebuffer.rs  gpu_cpu_fence.rs  gpu_gpu_fence.rs  image.rs  mod.rs  pipeline.rs  renderpass.rs  sampler.rs  shader.rs  shader_module.rs  swapchain.rs  window.rs
parsec-engine/src/graphics/renderer/: camera_data.rs  depth_image.rs  light_data.rs  material_data.rs  mesh_data.rs  mod.rs  present_image.rs  shadow.rs  sync.rs  texture.rs  texture_atlas.rs  transform_data.rs
parsec-engine/src/graphics/renderer/assets/mesh/: mod.rs  obj.rs
parsec-engine/src/graphics/renderer/components/: camera.rs  light.rs  mod.rs  transform.rs
parsec-engine/src/graphics/vulkan/: access.rs  allocation.rs  allocator.rs  barriers.rs  buffer.rs  buffer_usage.rs  command_buffer.rs  descriptor_set.rs  device.rs  fence.rs  format_size.rs  framebuffer.rs  graphics_pipeline.rs  handle.rs  image.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  pipeline_stage.rs  queue.rs  renderpass.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  utils.rs
parsec-engine/src/input/: key.rs  keys.rs  mod.rs  mouse.rs
parsec-engine/src/math/: ivec.rs  mat.rs  mod.rs  uvec.rs  vec.rs
parsec-engine/src/renderer/: camera_data.rs  depth_image.rs  graphics_bundle.rs  image_atlas.rs  integrated_image.rs  light_data.rs  material_data.rs  mesh_data.rs  mod.rs  present_image.rs  shadow.rs  sync.rs  texture.rs  texture_atlas.rs  transform_data.rs
parsec-engine/src/renderer/components/: camera.rs  light.rs  mesh_renderer.rs  transform.rs
parsec-engine/src/resources/: data.rs  dependency.rs  mod.rs
parsec-engine/src/utils/: borrowing.rs  id_counter.rs  id_vec.rs  identifiable.rs  mod.rs  small_vec.rs
shaders/: flat.frag  (+4 more)
(+33 files in other folders)
