[package]
name = "parsec-engine-assets"
version = "0.1.0"
edition = "2024"

[dependencies]
parsec-engine-graphics = { version = "0.1.0", path = "../parsec-engine-graphics" }
parsec-engine-math = { version = "0.1.0", path = "../parsec-engine-math" }
parsec-engine-utils = { version = "0.1.0", path = "../parsec-engine-utils" }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
