[package]
name = "parsec-engine-assets"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
parsec-engine-graphics.workspace = true
parsec-engine-math.workspace = true
parsec-engine-utils.workspace = true
parsec-engine-ecs.workspace = true
regex.workspace = true
serde_json.workspace = true
postcard.workspace = true
