[package]
name = "parsec-engine-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
parsec-engine-assets = { path = "../parsec-engine-assets" }
parsec-engine-error = { version = "0.1.0", path = "../parsec-engine-error" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
