[package]
name = "parsec-engine-input"
version.workspace = true
edition.workspace = true

[dependencies]
winit.workspace = true
parsec-engine-ecs.workspace = true
parsec-engine-error.workspace = true
parsec-engine-graphics.workspace = true
parsec-engine-math.workspace = true
parsec-engine-utils.workspace = true
