[package]
name = "parsec-engine-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
parsec-engine-macros = { path = "../parsec-engine-macros" }
parsec-engine-graphics = { path = "../parsec-engine-graphics" }
parsec-engine-vulkan = { path = "../parsec-engine-vulkan" }
parsec-engine-math = { path = "../parsec-engine-math" }
parsec-engine-ecs = { path = "../parsec-engine-ecs" }
parsec-engine-error = { path = "../parsec-engine-error" }
parsec-engine-utils = { path = "../parsec-engine-utils" }
thiserror = "2.0.18"
