[package]
name = "parsec-engine-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
parsec-engine-ecs.workspace = true
parsec-engine-error.workspace = true
parsec-engine-graphics.workspace = true
parsec-engine-macros.workspace = true
parsec-engine-math.workspace = true
parsec-engine-utils.workspace = true
parsec-engine-vulkan.workspace = true
