[package]
name = "parsec-engine-vulkan"
version.workspace = true
edition.workspace = true

[dependencies]
ash.workspace = true
ash-window.workspace = true
thiserror.workspace = true
winit.workspace = true
parsec-engine-error.workspace = true
parsec-engine-graphics.workspace = true
parsec-engine-math.workspace = true
parsec-engine-utils.workspace = true
