[package]
name = "parsec-engine"
version.workspace = true
edition.workspace = true

[dependencies]
ash.workspace = true
ash-window.workspace = true
once_cell.workspace = true
thiserror.workspace = true
winit.workspace = true
parsec-engine-assets.workspace = true
parsec-engine-ecs.workspace = true
parsec-engine-error.workspace = true
parsec-engine-graphics.workspace = true
parsec-engine-input.workspace = true
parsec-engine-macros.workspace = true
parsec-engine-math.workspace = true
parsec-engine-renderer.workspace = true
parsec-engine-utils.workspace = true
parsec-engine-vulkan.workspace = true
