[package]
name = "parsec-engine"
version.workspace = true
edition.workspace = true

[dependencies]
ash.workspace = true
ash-window.workspace = true
once_cell.workspace = true
thiserror.workspace = true
winit.workspace = true
parsec-engine-macros.workspace = true
parsec-engine-math.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
clap.workspace = true
